css/uqLab.css
li {
  font-family: 'Pontano Sans' , sans-serif;
  font-size: 95%;
  border: none;
}

small{
  font-size: 75%;
  font-style: italic;
  color: gray;
}

td {
  text-align: left;
  padding-left: 25px;
}

table {
  border-collapse: collapse;
  border-spacing: 25px 25px;
}

body {
	font-family: 'Pontano Sans', sans-serif;
	font-size: 100%;
	margin: 1em;
	background-color: #EEEEEE;
    float:center;
}

div.card {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	text-align: justify;
	text-justify: inter-word;
	background-color: #FFFFFF;
  	padding: 1em;
	border-radius: 1em;
	max-width:960px;
	margin:auto;
}


a {
  color:#3399ff;
  text-decoration: none;
}

h1 {
  font-family: 'Open Sans Condensed', sans-serif;  font-size: 175%;
  border: none;
  color: #333333;
  font-weight: bold;
}

h2 {
	font-family: 'Open Sans Condensed', sans-serif;
	font-size: 140%;
  border: none;
	color: #236bb2;
	font-weight: bold;
}

h3 {
	font-family: 'Open Sans Condensed', sans-serif;
  font-size: 100%;
  border: none;
	color: #333333;
	font-weight: bold;
}

h4 {
	font-family: 'Lato', sans-serif;
    font-size: 80%;
    border: none;
	color: #333333;
}

div.blocktitle {
	color: #333333;
}

div.blockcontent {
    border: none;
	font-size: 90%;
	font-family: 'Pontano Sans', sans-serif;
}

div.infoblock > div.blockcontent {
    background: #ffffdd;
}

div.codeblock > div.blockcontent, div.blockcontent pre {
	background: #f8f8f8;
}

body, p {
  line-height: 1.5em;
  margin-bottom: 1.2em;
}

b {
    font-weight: normal;
}

p b {
    font-style: italic;
}

div.container {
    width: device-width;
    border: 0px;	
}

#wrap {
   width:640px;
   margin:2 auto;
}

#left_col {
   float:left;
   width:320px;
}
#right_col {
   float:right;
   width:320px;
}


header {
    clear: left;
    text-align: left;
}

footer {
	font-size:75%;
    padding: 1em;
    clear: left;
    text-align: left;
}

nav {
    float: center;
    max-width: device-width;
    margin: 0em;
    padding: 0em;
	text-align: left;
	font-family: 'Pontano Sans', sans-serif;
}

nav ul {
    list-style-type: none;
    padding: 0;
	font-family: 'Pontano Sans', sans-serif;
}

nav ul a {
    text-decoration: none;
}

